# rocket-oauth2-example

./: Cargo.toml  README.md  Rocket.toml
src/: README.md  auth.rs  auth_routes.rs  config.rs  github_api.rs  main.rs  session.rs  stash.rs  timeout_set.rs
src/auth/: config.rs  mod.rs  routes.rs  session_data.rs  user.rs
templates/: index.html.hbs
