[package]
name = "rocket-oauth2-example"
version = "0.1.0"
edition = "2021"


[dependencies]
log = "0.4.21"
reqwest = { version = "0.12.3", features = ["json"] }
rocket = "0.5.0"
rocket_dyn_templates = { version = "0.1.0", features = ["handlebars"] }
rocket_oauth2 = "0.5.0"
serde_json = "1.0.115"
stderrlog = "0.6.0"

