[package]
name = "rocket-oauth2-example"
version = "0.1.0"
edition = "2021"


[dependencies]
rocket = { version = "0.5.0", features = ["secrets"] }
rocket_dyn_templates = { version = "0.1.0", features = ["handlebars"] }
oauth2 = "4.4.2"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.82"
reqwest = { version = "0.12.4", features = ["rustls-tls"] }
openssl = { version = "0.10", features = ["vendored"] }
