[package]
name = "rocket-oauth2-example"
version = "0.1.0"
edition = "2021"


[dependencies]
rocket = { version = "0.5.0", features = ["secrets"] }
rocket_dyn_templates = { version = "0.1.0", features = ["handlebars"] }
oauth2 = "4.4.2"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0.82"
reqwest = { version = "0.12.4", features = ["rustls-tls", "json"] }
openssl = { version = "0.10", features = ["vendored"] }
serde_json = "1.0.115"
serde_derive = "1.0.197"



[dependencies.uuid]
version = "1.8.0"
features = [
    "v4", # Lets you generate random UUIDs
    "fast-rng", # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]